[gd_scene load_steps=7 format=3 uid="uid://dmly03osh7f6u"]

[ext_resource type="FontFile" uid="uid://c6hrglfhhssw7" path="res://assets/fonts/Kurland.otf" id="1_bdsxp"]
[ext_resource type="Script" path="res://inputquest.gd" id="1_ql7ot"]

[sub_resource type="LabelSettings" id="LabelSettings_ipqw8"]
font = ExtResource("1_bdsxp")
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_s2qrc"]
font = ExtResource("1_bdsxp")
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_j4mpn"]
font = ExtResource("1_bdsxp")
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_m58vt"]
font = ExtResource("1_bdsxp")
font_size = 27

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ql7ot")
metadata/_edit_horizontal_guides_ = []

[node name="color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.545098, 1, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.19
anchor_right = 0.5
anchor_bottom = 0.19
offset_left = -103.0
offset_top = -13.0
offset_right = 99.0
offset_bottom = 19.0
text = "Insira a Pergunta "
label_settings = SubResource("LabelSettings_ipqw8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.266
anchor_right = 0.5
anchor_bottom = 0.266
offset_left = -200.0
offset_top = -27.6
offset_right = 200.0
offset_bottom = 27.4
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "pergunta "
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_top = 0.5
anchor_right = 0.508
anchor_bottom = 0.5
offset_left = -339.4
offset_top = -36.0
offset_right = 339.6
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="LineEdit" type="LineEdit" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "resposta 1"
alignment = 1

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "resposta 2"
alignment = 1

[node name="LineEdit3" type="LineEdit" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "resposta 3"
alignment = 1

[node name="LineEdit4" type="LineEdit" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "resposta 4"
alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.502
anchor_top = 0.405
anchor_right = 0.502
anchor_bottom = 0.405
offset_left = -56.6
offset_top = -16.0
offset_right = 56.4
offset_bottom = 16.0
text = "Respostas"
label_settings = SubResource("LabelSettings_s2qrc")

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.506
anchor_top = 0.623
anchor_right = 0.506
anchor_bottom = 0.627
offset_left = -95.8
offset_top = -15.8
offset_right = 95.2
offset_bottom = 13.8
text = "resposta correta"
label_settings = SubResource("LabelSettings_j4mpn")

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.506
anchor_top = 0.707
anchor_right = 0.506
anchor_bottom = 0.707
offset_left = -177.8
offset_top = -20.2
offset_right = 164.2
offset_bottom = 19.8

[node name="LineEdit" type="LineEdit" parent="HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "insira exatamente como a resposta"
alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.093
anchor_top = 0.945
anchor_right = 0.093
anchor_bottom = 0.945
offset_left = -48.4
offset_top = -23.0001
offset_right = 48.6
offset_bottom = 22.9999
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.988235, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bdsxp")
theme_override_font_sizes/font_size = 35
text = "Quit "
flat = true

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.904
anchor_top = 0.943
anchor_right = 0.904
anchor_bottom = 0.943
offset_left = -70.2
offset_top = -22.8
offset_right = 69.8
offset_bottom = 23.2
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.988235, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bdsxp")
theme_override_font_sizes/font_size = 35
text = "Confirm "
flat = true

[node name="Label4" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.132
anchor_right = 0.495
anchor_bottom = 0.132
offset_left = -97.0
offset_top = -16.2
offset_right = 97.0
offset_bottom = 15.8
label_settings = SubResource("LabelSettings_m58vt")

[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="HBoxContainer2/LineEdit" to="." method="_on_line_editop_text_submitted"]
[connection signal="text_submitted" from="HBoxContainer2/LineEdit2" to="." method="_on_line_edit_2_text_submitted"]
[connection signal="text_submitted" from="HBoxContainer2/LineEdit3" to="." method="_on_line_edit_3_text_submitted"]
[connection signal="text_submitted" from="HBoxContainer2/LineEdit4" to="." method="_on_line_edit_4_text_submitted"]
[connection signal="text_submitted" from="HBoxContainer3/LineEdit" to="." method="pergunta_certa_text_submitted"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
